--- a/index.html
+++ b/index.html
@@ -2,10 +2,29 @@
 <html>
 <head>
     <title>我的第一個網頁</title>
+    <style>
+        body {
+            text-align: center;
+            background-color: #e0f7fa; /* 換個顏色 */
+            font-family: Arial, sans-serif;
+            margin-top: 50px;
+        }
+        h1 { color: #00796b; }
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            background-color: #00796b;
+            color: white;
+            border: none;
+            border-radius: 5px;
+        }
+    </style>
 </head>
 <body style="text-align: center; background-color: #f0f0f0;">
     <h1>歡迎來到我的網站！</h1>
     <p>這是我親手寫的第一行 HTML。</p>
     <button onclick="alert('你好！')">點我試試</button>
 </body>
+
 </html>
