--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-Hant">
 <head>
-    <meta charset="UTF-8"> <title>我的第一個網頁</title>
+    <meta charset="UTF-8">
+    <title>我的第一個網頁</title>
     <style>
         body {
             text-align: center;
-            background-color: #e0f7fa;
-            font-family: Arial, sans-serif;
+            background-color: #e0f7fa; 
+            font-family: Arial, "Microsoft JhengHei", sans-serif;
             margin-top: 50px;
         }
         h1 { color: #00796b; }
@@ -18,9 +19,8 @@
             color: white;
             border: none;
             border-radius: 5px;
-            transition: 0.3s; /* 讓變化更平滑 */
+            transition: 0.3s;
         }
-        /* 額外加的小特效：滑鼠移上去會變色 */
         button:hover {
             background-color: #004d40;
         }
